Fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 canvas {
 	/*width: 300px;
 	height: 300px;*/
-	margin: 20px;
+	/*margin: 20px;*/
 }
 
 body {
@@ -9,10 +9,12 @@ body {
 }
 
 html, body {
-	width: 100%;
-	height: 100%;
+	/*width: 100%;
+	height: 100%;*/
 	margin: 0;
+	padding: 0;
 }
+
 #container {
 	width: 300px;
 	height: 300px;
